--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "swiper": "^8.2.4"
   },
   "devDependencies": {
+    "@iconify/json": "^2.1.66",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
@@ -28,6 +29,10 @@
     "postcss": "^8.4.14",
     "sass": "^1.53.0",
     "typescript": "^4.6.3",
-    "vite": "^2.9.9"
+    "unplugin-icons": "^0.14.5",
+    "vite": "^2.9.9",
+    "vite-plugin-imagemin": "^0.6.1",
+    "vite-plugin-qrcode": "^0.1.1",
+    "vite-plugin-remove-console": "^1.0.3"
   }
 }
